<resources>
    <string name="app_name">FitHome: Домашняя тренировка</string>

    <string name="facebook_app_id" translatable="false">400380150591215</string>

    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>

    <string name="nav_dashboard">Активность</string>
    <string name="nav_subscription">Подписка</string>
    <string name="nav_weight">Вес</string>
    <string name="nav_water">Вода</string>
    <string name="nav_exercises">Упражнения</string>
    <string name="nav_rate_app">Оценить приложение</string>
    <string name="nav_settings">Настройки</string>
    <string name="default_language">ru</string>
    <string name="pref_name">com.fitness.athome</string>
    <string name="dashboard_water">Вода</string>
    <string name="dashboard_weight">Вес</string>

    <string name="auth_continue_as_guest">Continue as guest</string>
    <string name="auth_sign_in_with_facebook">Sign in with facebook</string>
    <string name="auth_sign_in_with_google">Sign in with google</string>
    <string name="auth_title">Profile</string>
    <string name="loading">Loading...</string>
    <string name="enter_user_data_done">Done</string>
    <string name="enter_user_data_title">Information</string>
    <string name="enter_user_data_name">Your name</string>
    <string name="enter_user_data_goal">Your goal</string>
    <string name="enter_user_data_activity">Your activity</string>
    <string name="enter_user_data_enter_your_name">Enter your name</string>
    <string name="enter_user_data_goal_lose_weight">Lose weight</string>
    <string name="enter_user_data_goal_weight_maintenance">Weight maintenance</string>
    <string name="enter_user_data_goal_weight_gain">Weight gain</string>
    <string name="enter_user_data_activity_low">Low</string>
    <string name="enter_user_data_activity_medium">Medium</string>
    <string name="enter_user_data_activity_high">High</string>
    <string name="enter_user_data_error_enter_name">Enter your name</string>
    <string name="enter_user_data_error_choose_goal">Choose your goal</string>
    <string name="enter_user_data_error_choose_activity">Choose your activity</string>
</resources>
