<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/nav_dashboard"
            android:icon="@drawable/baseline_account_circle_black_24"/>

        <item
            android:id="@+id/nav_subscription"
            android:title="@string/nav_subscription"
            android:icon="@drawable/baseline_local_atm_black_24"/>
        <item
            android:id="@+id/nav_weight"
            android:title="@string/nav_weight"
            android:icon="@drawable/baseline_account_balance_wallet_black_24"/>
        <item
            android:id="@+id/nav_water"
            android:title="@string/nav_water"
            android:icon="@drawable/baseline_local_drink_black_24"/>
        <item
            android:id="@+id/nav_exercises"
            android:title="@string/nav_exercises"
            android:icon="@drawable/baseline_accessibility_black_24"/>
        <item
            android:id="@+id/nav_rate_app"
            android:title="@string/nav_rate_app"
            android:icon="@drawable/baseline_rate_review_black_24"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            android:icon="@drawable/baseline_settings_black_24"/>
    </group>

</menu>